--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,12 @@
 {
     "tasks": {
-      "dev": "deno run --allow-all --env --watch main.ts",
-      "start": "deno run --allow-all --env main.ts"
+      "dev": "deno run --env --allow-all  --watch main.ts",
+      "start": "deno run --env --allow-all  main.ts"
     },
     "imports": {
       "@apollo/server": "npm:@apollo/server@^4.9.5",
       "@apollo/server/standalone": "npm:@apollo/server@^4.9.5/standalone",
-      "graphql": "npm:graphql@^16.8.1"
+      "graphql": "npm:graphql@^16.8.1",
+      "mongoose": "npm:mongoose@8.0.1"
     }
   }
